Fixed team pics clipping outside

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -81,6 +81,7 @@
   justify-content: space-evenly;
   margin-right: auto;
   margin-left: auto;
+  overflow: hidden;
 }
 
 .threeStepProcessColumn {
